# QuAD-Pro-Prototype

./: .install.sh.swp  README.md  install.sh
src/CDP/: CMakeLists.txt
src/CDP/src/: BloomFilter.cpp  BloomFilter.h  CRC32.h  DuckLink.h  Packet.cpp  Packet.h  PapaDuck.cpp  PapaDuck.h  Utils.cpp  Utils.h  main.cpp  redis.cpp  redis.h
src/LoRa/: CMakeLists.txt
src/LoRa/src/: helpFunctions.c  main.c  main.h  redis.c  sx1262.c
src/Web-Interface/: useful_commands.txt  webInstall.sh
src/Web-Interface/webapp/: UI_app.py
src/Web-Interface/webapp/templates/: index.html
src/Web-Interface/webapp/web_py_env/: pyvenv.cfg
src/messageBroker/: .redis.c.swp  chat  producer  producer.c  producer2.c  publish_custom  publish_custom.c  redis.c  redis_consumer  redis_consumer.c  send  subscriber  subscriber.c
src/utils/: .spi_loopback_test.c.swp  spi_loopback_test  spi_loopback_test.c
src/utils/messageBroker/: CMakeLists.txt
src/utils/messageBroker/src/: delete_stream.c  publish_custom.c  redis.c  redis.h  redis_consumer.c  redis_stream.c
src/utils/rx/: CMakeLists.txt  example  helpFunctions.c  helpFunctions.h  receive  receiveCont  receive_continous.c  receive_ex.c  receive_oneshot.c  sx1262.c  sx1262.h  transmit.h
src/utils/rx/src/: arduino_receive.ino  helpFunctions.c  sx1262x_defs_custom.h
src/utils/tx/: .helpFunctions.c.swp  CMakeLists.txt  cdp.h  helpFunctions.c  helpFunctions.h  redis  redis_transmit.c  sx1262.c  transmit  transmit-  transmit.c  transmit.h  trasnmit
